--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "geist": "^1.3.0",
+    "hashids": "^2.3.0",
     "lucide-react": "^0.464.0",
     "next": "^15.0.1",
     "next-auth": "5.0.0-beta.25",
