--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "next": "^15.0.1",
     "next-auth": "5.0.0-beta.25",
     "nodemailer": "^6.9.16",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
@@ -54,6 +55,7 @@
     "@types/eslint": "^8.56.10",
     "@types/node": "^20.14.10",
     "@types/nodemailer": "^6.4.17",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
