--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zod_utilz": "^0.8.3"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.10",
