--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
     "@yudiel/react-qr-scanner": "^2.0.8",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "geist": "^1.3.0",
@@ -55,6 +56,7 @@
     "zod_utilz": "^0.8.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/eslint": "^8.56.10",
     "@types/node": "^20.14.10",
     "@types/nodemailer": "^6.4.17",
