--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "lint:fix": "next lint --fix",
     "preview": "next build && next start",
     "start": "next start",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "create_user": "tsx src/scripts/createUser.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
