--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "clsx": "^2.1.1",
     "geist": "^1.3.0",
     "hashids": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.464.0",
     "next": "^15.0.1",
     "next-auth": "5.0.0-beta.25",
@@ -60,6 +61,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/eslint": "^8.56.10",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.14.10",
     "@types/nodemailer": "^6.4.17",
     "@types/qrcode": "^1.5.5",
