--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "universal-cookie": "^7.2.2",
     "zod": "^3.23.8",
     "zod_utilz": "^0.8.3"
   },
